# basketball_worldwide

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  env.example  pyproject.toml
.github/workflows/: lint_format.yaml
migrations/: env.py
migrations/versions/: 36b4fdd64607_added_team_record_and_team_game_stats.py  4c9f0c5ed4db_added_year_to_team_record.py  7d2421c9baaf_added_scheduled_games.py  9774c3f23d9b_initial_migration.py  ca47d40b3aab_added_player_characters_and_users_tables.py  d29899737dc1_updated_player_game_stats.py  d65ef04c1bf9_added_conferences_and_divisions.py  e24d5f6ec160_player_and_game_stats_tables.py  e611a6a0426a_player_db_schema_updates.py
src/: constants.py  main.py
src/api/: health.py
src/api/v1/: league.py  player_character.py  simulate.py  team.py  user.py
src/config/: settings.py
src/db/: engine.py  session.py
src/db/models/: __init__.py  (+14 more)
src/generators/: division.py  player.py  schedule.py  team.py
src/models/: conference.py  division.py  enum.py  game.py  league.py  player.py  player_character.py  scheduled_game.py  simulate.py  team.py  user.py
src/repositories/: base.py  conference.py  division.py  league.py  player.py  player_attributes.py  player_character.py  player_game_stats.py  scheduled_game.py  team.py  team_game_stats.py  team_record.py  user.py
src/repostories/: base_repo.py  league_repo.py  team_repo.py
src/services/: league.py  player.py  player_character.py  sim_service.py  team.py  user.py
src/simulators/: game.py
tests/: conftest.py
tests/api/: test_health.py
(+3 files in other folders)
