[project]
name = "basketball-worldwide"
version = "0.1.0"
description = "Basketball Worldwide API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.3",
    "fastapi==0.128.5",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "sqlalchemy[asyncio]==2.0.46",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.15.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
